使用模板插入示例代码

--- a/start-site/src/main/resources/application.yml
+++ b/start-site/src/main/resources/application.yml
@@ -1639,6 +1639,13 @@ initializr:
     - name: Groovy
       id: groovy
       default: false
+  architectures:
+    - name: None
+      id: none
+      default: false
+    - name: Mvc
+      id: mvc
+      default: true
   bootVersions:
     - name : Latest SNAPSHOT
       id: 2.2.0.BUILD-SNAPSHOT
